Project1/objects/Expense__c.object
<CustomObject>
    <fields>
        <fullName>Amount_INR__c</fullName>
        <label>Amount (INR)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Contribution_INR__c</fullName>
        <description>Total Contributed Amount for the event</description>
        <label>Total Contribution (INR)</label>
        <summarizedField>Expense_Member__c.Contribution_Amount_INR__c</summarizedField>
        <summaryForeignKey>Expense_Member__c.Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>